# July_unificada

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  WIKI.TXT  plan_refactor_july_unificada.md  roadmad.md  roadmap.md
apps/july/: .gitignore  AGENTS.md  July_GPT.txt  July_Genspark.txt  July_Z.AI.txt  MCP_SETUP.md  PROJECT_PROTOCOL.md  Punto_inicial.txt  README.md  ROADMAP.md  pyproject.toml  start-july-mcp.cmd  start-july-mcp.sh
apps/july/docs/: initial-vision.md  model-contributions.md
apps/july/july/: __init__.py  __main__.py  analyzer.py  classifier.py  cli.py  cli_context.py  cli_output.py  cli_parser.py  cockpit.py  cockpit_builders.py  config.py  db.py  external_refs.py  llm.py  mcp.py  mcp_utils.py  models.py  pipeline.py  project_checkpoints.py  project_conversation.py  project_lifecycle.py  project_memory_actions.py  project_messages.py  project_surface.py  project_text.py  skill_registry.py  ui.py  url_fetcher.py
apps/july/plans/: July_onboarding-plan.md  july-conversational-layer-plan.md  july-next-evolution.md  july-v0.4-implementation-plan.md
apps/july/scripts/: bootstrap.ps1  july.ps1  july.sh  mcp.ps1  mcp.sh  ui.ps1  ui.sh
apps/july/tests/: test_analyzer.py  test_cockpit_ui.py  test_developer_profile.py  test_distillation.py  test_memory_audit.py  test_memory_repository.py  test_project_conversation.py  test_project_repository.py  test_project_surface.py  test_reference_repository.py  test_search_repository.py  test_sessions.py  test_storage_migrations.py  test_task_repository.py  test_topic_repository.py  test_version.py
scripts/: july.ps1  (+7 more)
(+106 files in other folders)
