[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "july"
version = "0.5.0"
description = "July local-first memory orchestrator"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Sergi + Codex" }
]
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "jinja2>=3.1,<4",
  "uvicorn>=0.32,<1",
]

[project.scripts]
july = "july.cli:main"

[tool.setuptools.packages.find]
include = ["july*"]

[tool.setuptools.package-data]
july = ["templates/*.html"]
